--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity3"></activity>
-        <activity android:name=".activities.ErrorsActivity">
+        <service
+            android:name=".service_problem.ProblemService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".service_problem.ServiceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.BottomNavigationBarActivity"></activity>
+        <activity android:name=".activities.FragmentsActivity" />
+        <activity android:name=".activities.MainActivity3" />
+        <activity android:name=".activities.ErrorsActivity" />
 
         <service
             android:name=".services.MusicPlayerService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activities.MusicPlayerActivity"></activity>
+        <activity android:name=".activities.MusicPlayerActivity" />
         <activity android:name=".activities.TestMyServiceActivity" />
 
         <service
