--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
-    
+    implementation 'org.greenrobot:eventbus:3.0.0'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     testImplementation 'junit:junit:4.12'
