--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.TabLayoutActivity">
+
+        </activity>
+
         <service
             android:name=".service_problem.ProblemService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity android:name=".service_problem.ServiceActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".activities.BottomNavigationBarActivity"></activity>
+        <activity android:name=".activities.BottomNavigationBarActivity" />
         <activity android:name=".activities.FragmentsActivity" />
         <activity android:name=".activities.MainActivity3" />
         <activity android:name=".activities.ErrorsActivity" />
@@ -63,7 +63,13 @@
         <activity android:name=".activities.BroadcastReceiverActivity" />
         <activity android:name=".activities.MultipleItemsActivity" />
         <activity android:name=".activities.ImageGridLayoutManagerActivity" />
-        <activity android:name=".activities.RecyclerViewActivity" />
+        <activity android:name=".activities.RecyclerViewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activities.MainActivity2" />
         <activity android:name=".activities.MainActivity" />
     </application>
