--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.TabLayoutActivity">
+        <activity android:name=".activities.NavigationDrawerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+        <activity android:name=".activities.TabLayoutActivity"></activity>
 
         <service
             android:name=".service_problem.ProblemService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".service_problem.ServiceActivity">
-
-        </activity>
+        <activity android:name=".service_problem.ServiceActivity"></activity>
         <activity android:name=".activities.BottomNavigationBarActivity" />
         <activity android:name=".activities.FragmentsActivity" />
         <activity android:name=".activities.MainActivity3" />
@@ -64,11 +67,7 @@
         <activity android:name=".activities.MultipleItemsActivity" />
         <activity android:name=".activities.ImageGridLayoutManagerActivity" />
         <activity android:name=".activities.RecyclerViewActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity2" />
         <activity android:name=".activities.MainActivity" />
