--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,21 +13,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.NavigationDrawerActivity">
+        <activity android:name=".activities.RoomDatabaseExample2Activity">
+
+        </activity>
+        <activity android:name=".activities.RoomDatabaseSimpleExampleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TabLayoutActivity"></activity>
+        <activity android:name=".activities.NavigationDrawerActivity"></activity>
+        <activity android:name=".activities.TabLayoutActivity" />
 
         <service
             android:name=".service_problem.ProblemService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".service_problem.ServiceActivity"></activity>
+        <activity android:name=".service_problem.ServiceActivity" />
         <activity android:name=".activities.BottomNavigationBarActivity" />
         <activity android:name=".activities.FragmentsActivity" />
         <activity android:name=".activities.MainActivity3" />
@@ -66,9 +70,7 @@
         <activity android:name=".activities.BroadcastReceiverActivity" />
         <activity android:name=".activities.MultipleItemsActivity" />
         <activity android:name=".activities.ImageGridLayoutManagerActivity" />
-        <activity android:name=".activities.RecyclerViewActivity">
-
-        </activity>
+        <activity android:name=".activities.RecyclerViewActivity" />
         <activity android:name=".activities.MainActivity2" />
         <activity android:name=".activities.MainActivity" />
     </application>
