--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
